Mise à jour index avec menu burger responsive

--- a/public/index.html
+++ b/public/index.html
@@ -80,12 +80,12 @@
 <!-- 🌟 Avantages -->
 <section class="advantages" id="avantages">
   <h2 data-i18n="advantages.title">Pourquoi choisir KwikSend ?</h2>
-  <ul>
-    <li data-i18n="advantages.speed">⚡ Rapidité : transferts instantanés</li>
-    <li data-i18n="advantages.security">🔒 Sécurité : transactions chiffrées</li>
-    <li data-i18n="advantages.access">🌍 Accessibilité : Afrique & Europe</li>
-    <li data-i18n="advantages.flex">💳 Flexibilité : Mobile Money & IBAN</li>
-  </ul>
+  <div class="features-grid">
+    <div class="card">⚡ Rapidité : transferts instantanés</div>
+    <div class="card">🔒 Sécurité : transactions protégées</div>
+    <div class="card">🌍 Accessibilité : Afrique & Europe</div>
+    <div class="card">💳 Flexibilité : Mobile Money & IBAN</div>
+  </div>
 </section>
 
 <!-- ℹ️ À propos -->
